--- a/data/cards/27655513.yaml
+++ b/data/cards/27655513.yaml
@@ -99,7 +99,7 @@ sets:
     rarities:
     - Common
   pt:
-  - set_number: SBSC-SP014
+  - set_number: SBSC-PT014
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Common
