--- a/data/cards/31812496.yaml
+++ b/data/cards/31812496.yaml
@@ -82,11 +82,11 @@ sets:
     set_name: Ancient Sanctuary
     rarities:
     - Super Rare
-  - set_number: DR2-EN126
+  - set_number: DR2-FR126
     set_name: Dark Revelation Volume 2
     rarities:
     - Rare
-  - set_number: SD7-EN007
+  - set_number: SD7-FR007
     set_name: 'Structure Deck: Invincible Fortress'
     rarities:
     - Common
