--- a/data/cards/36468556.yaml
+++ b/data/cards/36468556.yaml
@@ -299,6 +299,10 @@ sets:
     rarities:
     - Common
   zh-TW:
+  - set_number: SD18-TC035
+    set_name: 'Structure Deck: Machiners Command'
+    rarities:
+    - Common
   - set_number: SP03-TC055
     set_name: Starter Pack Volume 3
     rarities:
