--- a/data/cards/41562624.yaml
+++ b/data/cards/41562624.yaml
@@ -53,7 +53,7 @@ sets:
     rarities:
     - Super Rare
   de:
-  - set_number: SAST-EN019
+  - set_number: SAST-DE019
     set_name: Savage Strike
     rarities:
     - Super Rare
