--- a/data/cards/61245672.yaml
+++ b/data/cards/61245672.yaml
@@ -100,7 +100,7 @@ sets:
     rarities:
     - Ultra Rare
     - 20th Secret Rare
-  - set_number: RC04-JP???
+  - set_number: RC04-JP049
     set_name: Rarity Collection Quarter Century Edition
     rarities:
     - Super Rare
