--- a/data/cards/70861343.yaml
+++ b/data/cards/70861343.yaml
@@ -180,7 +180,7 @@ sets:
     set_name: Expert Edition Volume.2
     rarities:
     - Common
-  - set_number: SD8-JP035
+  - set_number: SD8-KR035
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
