--- a/data/cards/71200730.yaml
+++ b/data/cards/71200730.yaml
@@ -206,7 +206,7 @@ sets:
     set_name: Dark Crisis
     rarities:
     - Common
-  - set_number: SD2-JP007
+  - set_number: SD2-KR007
     set_name: 'Structure Deck: Zombie Madness'
     rarities:
     - Common
