--- a/data/cards/74191942.yaml
+++ b/data/cards/74191942.yaml
@@ -107,7 +107,7 @@ sets:
     set_name: Spell Ruler
     rarities:
     - Super Rare
-  - set_number: RP01-EN059
+  - set_number: RP01-IT059
     set_name: Retro Pack
     rarities:
     - Rare
