--- a/data/cards/84834865.yaml
+++ b/data/cards/84834865.yaml
@@ -204,7 +204,7 @@ sets:
     set_name: Beginner's Edition 1
     rarities:
     - Common
-  - set_number: SD8-DE006
+  - set_number: SD8-JP006
     set_name: 'Structure Deck: Lord of the Storm'
     rarities:
     - Common
