--- a/data/cards/yugipedia1001773.yaml
+++ b/data/cards/yugipedia1001773.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ヴァルモニカの神異－ゼブフェーラ
-  ja_romaji:
+  ja: ヴァルモニカの<ruby>神<rt>しん</rt></ruby><ruby>異<rt>い</rt></ruby>－ゼブフェーラ
+  ja_romaji: Varumonika no Shin'i - Zebufēra
   ko:
   ko_rr:
   zh-TW:
