--- a/data/cards/yugipedia1001779.yaml
+++ b/data/cards/yugipedia1001779.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 天魔の聲選器－『ヴァルモニカ』
-  ja_romaji:
+  ja: <ruby>天<rt>てん</rt></ruby><ruby>魔<rt>ま</rt></ruby>の<ruby>聲<rt>せい</rt></ruby><ruby>選<rt>せん</rt></ruby><ruby>器<rt>き</rt></ruby>－『ヴァルモニカ』
+  ja_romaji: Tenma no Seisenki - "Varumonika"
   ko:
   ko_rr:
   zh-TW:
