--- a/data/cards/17559367.yaml
+++ b/data/cards/17559367.yaml
@@ -113,7 +113,7 @@ sets:
     set_name: Yu-Gi-Oh! World Championship 2008 promotional cards
     rarities:
     - Ultra Rare
-  - set_number: SD23-JP019
+  - set_number: SD23-KR019
     set_name: 'Structure Deck: Roar of the Sea Emperor'
     rarities:
     - Common
