--- a/data/cards/68427465.yaml
+++ b/data/cards/68427465.yaml
@@ -165,7 +165,7 @@ sets:
     set_name: Expert Edition Volume.1
     rarities:
     - Common
-  - set_number: SD5-KR027
+  - set_number: SD5-JP027
     set_name: "Structure Deck: Warrior's Triumph"
     rarities:
     - Common
