--- a/data/cards/94415058.yaml
+++ b/data/cards/94415058.yaml
@@ -206,7 +206,7 @@ sets:
     set_name: Starter Deck 2016
     rarities:
     - Common
-  - set_number: SD31-JP008
+  - set_number: SD31-KR007
     set_name: 'Structure Deck: Pendulum Evolution'
     rarities:
     - Common
