--- a/data/cards/yugipedia1001770.yaml
+++ b/data/cards/yugipedia1001770.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>天使の聲<rt>アンジェロ・ヴァルモニカ</rt></ruby>
-  ja_romaji:
+  ja_romaji: Anjero Varumonika
   ko:
   ko_rr:
   zh-TW:
