--- a/data/cards/yugipedia1001771.yaml
+++ b/data/cards/yugipedia1001771.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>悪魔の聲<rt>デモーネ・ヴァルモニ</rt></ruby>
-  ja_romaji:
+  ja_romaji: Demōne Varumonika
   ko:
   ko_rr:
   zh-TW:
