--- a/data/cards/yugipedia1001785.yaml
+++ b/data/cards/yugipedia1001785.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 律導のヴァルモニカ
-  ja_romaji:
+  ja: <ruby>律<rt>りつ</rt></ruby><ruby>導<rt>どう</rt></ruby>のヴァルモニカ
+  ja_romaji: Ritsudō no Varumonika
   ko:
   ko_rr:
   zh-TW:
