--- a/data/cards/yugipedia1001786.yaml
+++ b/data/cards/yugipedia1001786.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 選律のヴァルモニカ
-  ja_romaji:
+  ja: <ruby>選<rt>せん</rt></ruby><ruby>律<rt>りつ</rt></ruby>のヴァルモニカ
+  ja_romaji: Senritsu no Varumonika
   ko:
   ko_rr:
   zh-TW:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     If you control a "Valmonica" Monster Card: Apply 1 of these effects, or, if you control a "Valmonica" Link Monster, you can apply both, in sequence.
-    ● Gain 500 LP, also your opponent cannot target "Valmonica" Monster Cards you control with card effects for the rest of this turn.
+    ● Gain 500 LP, also your opponent cannot target "Valmonica" Monster Cards you control with card effects this turn.
     ● Take 500 damage, then you can negate the effects of 1 Effect Monster your opponent controls, until the end of this turn.
     You can only activate 1 "Valmonica of the Guiding Rhythm" per turn.
   de:
