--- a/data/cards/38033121.yaml
+++ b/data/cards/38033121.yaml
@@ -191,6 +191,11 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: ????-EN???
     set_name: 2-Player Starter Set
     rarities:
@@ -311,6 +316,14 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
+  - set_number: ????-DE???
+    set_name: 2-Player Starter Set
+    rarities:
   fr:
   - set_number: CT2-FR004
     set_name: Collectible Tins 2005
@@ -420,6 +433,14 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
+  - set_number: ????-FR???
+    set_name: 2-Player Starter Set
+    rarities:
   it:
   - set_number: RDS-ITSE2
     set_name: 'Rise of Destiny: Special Edition'
@@ -525,6 +546,14 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
+  - set_number: ????-IT???
+    set_name: 2-Player Starter Set
+    rarities:
   pt:
   - set_number: CT2-PT004
     set_name: Collectible Tins 2005
@@ -626,6 +655,14 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
+  - set_number: ????-PT???
+    set_name: 2-Player Starter Set
+    rarities:
   ja:
   - set_number: G3-11
     set_name: 'Yu-Gi-Oh! Duel Monsters III: Tri-Holy God Advent Official Tournament Street Duel Legend of Power prize card'
