--- a/data/cards/51482758.yaml
+++ b/data/cards/51482758.yaml
@@ -126,7 +126,7 @@ sets:
     rarities:
     - Common
   fr:
-  - set_number: LDD-F048
+  - set_number: LDD-FO48
     set_name: Legend of Blue Eyes White Dragon
     rarities:
     - Common
