--- a/data/cards/03643300.yaml
+++ b/data/cards/03643300.yaml
@@ -98,6 +98,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: PSV-076
     set_name: Pharaoh's Servant
     rarities:
@@ -156,6 +160,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   fr:
   - set_number: SDP-F076
     set_name: Pharaoh's Servant
@@ -202,6 +210,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   it:
   - set_number: SDF-I076
     set_name: Pharaoh's Servant
@@ -248,6 +260,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   pt:
   - set_number: LCJW-PT024
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
@@ -286,6 +302,10 @@ sets:
     set_name: Pharaoh's Servant (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   ja:
   - set_number: TB-26
     set_name: Thousand Eyes Bible
