--- a/data/cards/05556668.yaml
+++ b/data/cards/05556668.yaml
@@ -65,6 +65,11 @@ sets:
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: EDS-001
     set_name: Yu-Gi-Oh! The Eternal Duelist Soul promotional cards
     rarities:
@@ -94,6 +99,11 @@ sets:
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: TSC-F001
     set_name: Yu-Gi-Oh! The Sacred Cards promotional cards
@@ -111,6 +121,11 @@ sets:
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: TSC-I001
     set_name: Yu-Gi-Oh! The Sacred Cards promotional cards
@@ -128,11 +143,21 @@ sets:
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: YGLD-PTB28
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: G5-03
     set_name: 'Yu-Gi-Oh! Duel Monsters 5: Expert 1 promotional cards'
@@ -171,4 +196,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 450
