--- a/data/cards/09287078.yaml
+++ b/data/cards/09287078.yaml
@@ -48,6 +48,11 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: YGLD-DEB00
     set_name: Yugi's Legendary Decks
@@ -57,6 +62,11 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: YGLD-FRB00
     set_name: Yugi's Legendary Decks
@@ -66,6 +76,11 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: YGLD-ITB00
     set_name: Yugi's Legendary Decks
@@ -75,6 +90,11 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: YGLD-PTB00
     set_name: Yugi's Legendary Decks
@@ -84,6 +104,11 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: 15AY-JPB00
     set_name: 'Memories of the Duel King: Battle City Arc'
@@ -115,4 +140,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 9356
