--- a/data/cards/15800838.yaml
+++ b/data/cards/15800838.yaml
@@ -77,6 +77,11 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: SOD-DE056
     set_name: Soul of the Duelist
@@ -114,6 +119,11 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: SOD-FR056
     set_name: Soul of the Duelist
@@ -151,6 +161,11 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: SOD-IT056
     set_name: Soul of the Duelist
@@ -188,6 +203,11 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: SOD-PT056
     set_name: Soul of the Duelist
@@ -205,6 +225,11 @@ sets:
     set_name: 'Structure Deck: Dark World'
     rarities:
     - Common
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: SOD-JP056
     set_name: Soul of the Duelist
