--- a/data/cards/46986414.yaml
+++ b/data/cards/46986414.yaml
@@ -232,6 +232,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: ???-EN???
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
@@ -484,6 +488,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: ???-DE???
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
@@ -640,6 +648,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: ???-FR???
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
@@ -800,6 +812,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: ???-IT???
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
@@ -923,6 +939,10 @@ sets:
     set_name: Legend of Blue Eyes White Dragon (25th Anniversary Edition)
     rarities:
     - Ultra Rare
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
   - set_number: ???-PT???
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
