--- a/data/cards/88240808.yaml
+++ b/data/cards/88240808.yaml
@@ -87,6 +87,11 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   - set_number: LON-062
     set_name: Labyrinth of Nightmare
     rarities:
@@ -133,6 +138,11 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: LDC-F062
     set_name: Labyrinth of Nightmare
@@ -171,6 +181,11 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: LDI-I062
     set_name: Labyrinth of Nightmare
@@ -209,12 +224,22 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: BP02-PT011
     set_name: 'Battle Pack 2: War of the Giants'
     rarities:
     - Common
     - Mosaic Rare
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: LN-11
     set_name: Labyrinth of Nightmare (Japanese)
