--- a/data/cards/97120394.yaml
+++ b/data/cards/97120394.yaml
@@ -48,6 +48,11 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: SBC1-EN???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   de:
   - set_number: DPBC-DE004
     set_name: 'Duelist Pack: Battle City'
@@ -57,6 +62,11 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: SBC1-DE???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   fr:
   - set_number: DPBC-FR004
     set_name: 'Duelist Pack: Battle City'
@@ -66,6 +76,11 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: SBC1-FR???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DPBC-IT004
     set_name: 'Duelist Pack: Battle City'
@@ -75,6 +90,11 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: SBC1-IT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   pt:
   - set_number: DPBC-PT004
     set_name: 'Duelist Pack: Battle City'
@@ -84,6 +104,11 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Premium Gold Rare
+  - set_number: SBC1-PT???
+    set_name: 'Speed Duel: Streets of Battle City'
+    rarities:
+    - Common
+    - Secret Rare
   ja:
   - set_number: DP16-JP004
     set_name: 'Duelist Pack: Battle City'
@@ -97,4 +122,5 @@ sets:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 12275
