--- a/data/cards/81000306.yaml
+++ b/data/cards/81000306.yaml
@@ -64,7 +64,7 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
-  - set_number: ORCS-EN047
+  - set_number: ORCS-FR047
     set_name: Order of Chaos
     rarities:
     - Common
