--- a/data/rush/yugipedia1001861.yaml
+++ b/data/rush/yugipedia1001861.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示の効果モンスターを３体まで選び、その攻撃力・守備力をターン終了時まで４００ダウンする。自分のＬＰが相手より少ない場合、さらに手札のモンスター（レベル７）１体を自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
