--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -635,6 +635,10 @@ sets:
     set_name: Expansion Pack Vol.3
     rarities:
     - Gold Rare
+  - set_number: YSD5-KR025
+    set_name: Starter Deck 2010
+    rarities:
+    - Common
   - set_number: AST-KRPR2
     set_name: Ancient Sanctuary promotional cards
     rarities:
