--- a/rush.yaml
+++ b/rush.yaml
@@ -109829,6 +109829,81 @@ yugipedia_page_id: 1001861
 ---
 konami_id:
 name:
+  en: Jointech Burst Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジョインテック・バーストドラゴン
+  ja_romaji: Jointekku Bāsuto Doragon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all face-up monsters with 2500 or less ATK on your opponent's field. Then, this card gains ATK equal to [the number of monsters destroyed by this effect] x 500 until the end of this turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 3300
+def: 2500
+materials:
+  en: |-
+    "Jointech Rex" + "Blue Tooth Burst Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- High Tech Dragon
+- Jointech
+images:
+- index: 1
+  image: JointechBurstDragon-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP045
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1001925
+---
+konami_id:
+name:
   en: Hyper Assistant Achi
   de:
   es:
