--- a/data/cards/35050257.yaml
+++ b/data/cards/35050257.yaml
@@ -120,6 +120,10 @@ sets:
     set_name: Premium Pack Vol.5
     rarities:
     - Ultra Rare
+  - set_number: SD26-KR007
+    set_name: 'Structure Deck: Blitzkrieg of the Mechlight Dragons'
+    rarities:
+    - Common
   - set_number: CP18-KR019
     set_name: Collectors Pack 2018
     rarities:
