--- a/data/cards/47594192.yaml
+++ b/data/cards/47594192.yaml
@@ -6,7 +6,7 @@ name:
   es: Trío
   fr: Brelan
   it: Tre di Un Tipo
-  pt:
+  pt: Trinca
   ja: スリーカード
   ja_romaji: Surī Kādo
   ko: 쓰리 카드
@@ -24,7 +24,8 @@ text:
     Si vous contrôlez min. 3 monstres du même nom (Jetons exclus) : ciblez 3 cartes contrôlées par votre adversaire ; détruisez les cibles.
   it: |-
     Se controlli 3 o più mostri con lo stesso nome, eccetto i Segna-Mostro: scegli come bersaglio 3 carte controllate dal tuo avversario; distruggi quei bersagli.
-  pt:
+  pt: |-
+    Se você controlar 3 ou mais monstros com o mesmo nome, exceto Fichas: escolha 3 cards que seu oponente controla; destrua os alvos.
   ja: |-
     自分フィールド上にトークン以外の同名モンスターが３体以上存在する場合に発動できる。相手フィールド上のカード３枚を選択して破壊する。
   ko: |-
@@ -72,6 +73,11 @@ sets:
     rarities:
     - Common
   - set_number: SDCR-IT031
+    set_name: Cyber Dragon Revolution Structure Deck
+    rarities:
+    - Common
+  pt:
+  - set_number: SDCR-PT031
     set_name: Cyber Dragon Revolution Structure Deck
     rarities:
     - Common
