--- a/data/cards/53582587.yaml
+++ b/data/cards/53582587.yaml
@@ -680,6 +680,10 @@ sets:
     set_name: Starter Pack Volume 1
     rarities:
     - Ultra Rare
+  - set_number: SD23-TC036
+    set_name: 'Structure Deck: Roar of the Sea Emperor'
+    rarities:
+    - Common
   zh-CN:
   - set_number: ST20-SC035
     set_name: Starter Deck 2020
