--- a/data/cards/68005187.yaml
+++ b/data/cards/68005187.yaml
@@ -432,7 +432,7 @@ sets:
     rarities:
     - Common
   zh-TW:
-  - set_number: SD25-KR032
+  - set_number: SD25-TC032
     set_name: "Structure Deck: The Blue-Eyed Dragon's Thundering Descent"
     rarities:
     - Common
