--- a/data/cards/08414337.yaml
+++ b/data/cards/08414337.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Il tuo avversario non può attivare carte o effetti quando i mostro "Gusto" che controlli dichiarano i loro attacchi in questo turno.
   pt: |-
-    Seu oponente não pode ativar card ou efeitos quando os monstros "Gusto" que você controla declarem seus ataques neste turno.
+    Seu oponente não pode ativar cards ou efeitos quando os monstros "Gusto" que você controla declararem seus ataques neste turno.
   ja: |-
     このカードを発動したターン、自分フィールド上に存在する「ガスタ」と名のついたモンスターの攻撃宣言時、相手は魔法・罠・効果モンスターの効果を発動する事ができない。
   ko: |-
@@ -62,6 +62,11 @@ sets:
     - Super Rare
   it:
   - set_number: HA07-IT029
+    set_name: 'Hidden Arsenal 7: Knight of Stars'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: HA07-PT029
     set_name: 'Hidden Arsenal 7: Knight of Stars'
     rarities:
     - Super Rare
