--- a/data/cards/33609262.yaml
+++ b/data/cards/33609262.yaml
@@ -107,7 +107,7 @@ sets:
     rarities:
     - Common
   ja:
-  - set_number: SECE-EN061
+  - set_number: SECE-JP061
     set_name: Secrets of Eternity
     rarities:
     - Rare
