--- a/data/cards/38844957.yaml
+++ b/data/cards/38844957.yaml
@@ -71,7 +71,7 @@ sets:
     set_name: Dimension of Chaos
     rarities:
     - Secret Rare
-  - set_number: SHVA-EN060
+  - set_number: SHVA-IT060
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
