--- a/data/cards/44887817.yaml
+++ b/data/cards/44887817.yaml
@@ -75,6 +75,10 @@ sets:
     rarities:
     - Common
     - Shatterfoil Rare
+  - set_number: FUEN-DE053
+    set_name: Fusion Enforcers
+    rarities:
+    - Super Rare
   - set_number: SESL-DE056
     set_name: Secret Slayers
     rarities:
