--- a/data/cards/52824910.yaml
+++ b/data/cards/52824910.yaml
@@ -224,6 +224,10 @@ sets:
     set_name: 'Duelist Entry Deck VS: Saber Force'
     rarities:
     - Normal Parallel Rare
+  - set_number: SDKS-KR010
+    set_name: 'Structure Deck: Seto Kaiba'
+    rarities:
+    - Common
   zh-TW:
   - set_number: SP01-TC010
     set_name: Starter Pack Volume 1
