--- a/data/cards/70624184.yaml
+++ b/data/cards/70624184.yaml
@@ -69,6 +69,11 @@ sets:
     set_name: 'Hidden Arsenal 7: Knight of Stars'
     rarities:
     - Super Rare
+  pt:
+  - set_number: HA07-PT042
+    set_name: 'Hidden Arsenal 7: Knight of Stars'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DT14-JP016
     set_name: Duel Terminal - Ouroboros, Wicked Dragon of Destruction!!
