--- a/data/cards/96501677.yaml
+++ b/data/cards/96501677.yaml
@@ -94,7 +94,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: FET-EN013
+  - set_number: FET-KR013
     set_name: Flaming Eternity
     rarities:
     - Common
