--- a/data/cards/38049934.yaml
+++ b/data/cards/38049934.yaml
@@ -53,7 +53,7 @@ sets:
     rarities:
     - Super Rare
   fr:
-  - set_number: HA06-KR058
+  - set_number: HA06-FR058
     set_name: 'Hidden Arsenal 6: Omega Xyz'
     rarities:
     - Super Rare
