--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -1163,11 +1163,11 @@ R-Genex:
   zh-TW:
   zh-CN:
 Counter:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Konter
+  es: Contra
+  fr: Contre
+  it: Contra
+  pt: Contra
   ja: カウンター
   ja_romaji: Kauntā
   ko:
@@ -2843,11 +2843,11 @@ Yosenju:
   zh-TW:
   zh-CN:
 Battlin' Boxing:
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Unermüdliche Box
+  es: Boxeadores
+  fr: Boxe Indomptable
+  it: Pugilistico Indomito
+  pt: Boxeadores Obstinados
   ja: バーニングナックル
   ja_romaji: Bāningu Nakkuru
   ko:
