--- a/data/rush/17865.yaml
+++ b/data/rush/17865.yaml
@@ -51,6 +51,7 @@ series:
 images:
 - index: 1
   image: BlueToothBurstDragon-RDKP10-JP-UR.png
+  illustration: BlueToothBurstDragon-G002-JP-VG-artwork.png
 - index: 2
   image: BlueToothBurstDragon-RD711B-JP-NPR.png
 - index: 3
