--- a/data/rush/yugipedia1001925.yaml
+++ b/data/rush/yugipedia1001925.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（攻撃力２５００以下）を全て破壊する。さらに、このカードの攻撃力はターン終了時まで、［この効果で破壊したモンスターの数］×５００アップする。その後、相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・レックス」＋「碧牙の爆速竜」
   ko:
   zh-TW:
   zh-CN:
