--- a/rush.yaml
+++ b/rush.yaml
@@ -61420,6 +61420,7 @@ series:
 images:
 - index: 1
   image: JointechRex-RDGRD2-JP-NPR.png
+  illustration: JointechRex-G002-JP-VG-artwork.png
 - index: 2
   image: JointechRex-RD711B-JP-NPR.png
 - index: 3
@@ -73226,6 +73227,7 @@ series:
 images:
 - index: 1
   image: BlueToothBurstDragon-RDKP10-JP-UR.png
+  illustration: BlueToothBurstDragon-G002-JP-VG-artwork.png
 - index: 2
   image: BlueToothBurstDragon-RD711B-JP-NPR.png
 - index: 3
@@ -109849,7 +109851,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -109861,7 +109864,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（攻撃力２５００以下）を全て破壊する。さらに、このカードの攻撃力はターン終了時まで、［この効果で破壊したモンスターの数］×５００アップする。その後、相手フィールドの魔法・罠カード１枚を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -109879,7 +109883,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「ジョインテック・レックス」＋「碧牙の爆速竜」
   ko:
   zh-TW:
   zh-CN:
