--- a/data/cards/26704411.yaml
+++ b/data/cards/26704411.yaml
@@ -70,7 +70,7 @@ sets:
     - Common
     - Duel Terminal Normal Parallel Rare
   fr:
-  - set_number: HA04-EN042
+  - set_number: HA04-FR042
     set_name: "Hidden Arsenal 4: Trishula's Triumph"
     rarities:
     - Super Rare
