--- a/data/cards/47233801.yaml
+++ b/data/cards/47233801.yaml
@@ -98,7 +98,7 @@ sets:
     set_name: Pharaonic Guardian
     rarities:
     - Common
-  - set_number: HGP1-JP035
+  - set_number: HGP1-KR035
     set_name: Expert Edition Volume.1
     rarities:
     - Common
