--- a/data/cards/56410040.yaml
+++ b/data/cards/56410040.yaml
@@ -75,6 +75,10 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Common
+  - set_number: LC5D-DE024
+    set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
   - set_number: LEHD-DEC09
     set_name: Legendary Hero Decks
     rarities:
@@ -86,6 +90,10 @@ sets:
     - Super Rare
   - set_number: WGRT-FR046
     set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
+  - set_number: LC5D-FR024
+    set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
   - set_number: LEHD-FRC09
@@ -101,6 +109,10 @@ sets:
     set_name: War of the Giants Reinforcements
     rarities:
     - Common
+  - set_number: LC5D-IT024
+    set_name: Legendary Collection 5D's Mega Pack
+    rarities:
+    - Common
   - set_number: LEHD-ITC09
     set_name: Legendary Hero Decks
     rarities:
@@ -108,6 +120,10 @@ sets:
   pt:
   - set_number: WGRT-PT046
     set_name: War of the Giants Reinforcements
+    rarities:
+    - Common
+  - set_number: LC5D-PT024
+    set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Common
   - set_number: LEHD-PTC09
