--- a/data/cards/90727556.yaml
+++ b/data/cards/90727556.yaml
@@ -60,7 +60,7 @@ sets:
     rarities:
     - Super Rare
   fr:
-  - set_number: HA05-EN044
+  - set_number: HA05-FR044
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
     rarities:
     - Super Rare
