--- a/rush.yaml
+++ b/rush.yaml
@@ -110009,6 +110009,62 @@ yugipedia_page_id: 1002005
 ---
 konami_id:
 name:
+  en: Aura Buster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: オーラ・バスター
+  ja_romaji: Ōra Basutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Warrior Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: AuraBuster-RDKP14-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP14-JP051
+    set_name: Phoenix of the Roaring Flame
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1002011
+---
+konami_id:
+name:
   en: Hyper Assistant Achi
   de:
   es:
