--- a/data/cards/12117532.yaml
+++ b/data/cards/12117532.yaml
@@ -127,7 +127,7 @@ sets:
     rarities:
     - Millennium Rare
   ko:
-  - set_number: EOJ-JP059
+  - set_number: EOJ-KR059
     set_name: Enemy of Justice
     rarities:
     - Common
