--- a/data/cards/17653779.yaml
+++ b/data/cards/17653779.yaml
@@ -103,7 +103,7 @@ sets:
     set_name: Spell Ruler
     rarities:
     - Short Print
-  - set_number: LCJW-PT106
+  - set_number: LCJW-IT106
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
