--- a/data/cards/18816758.yaml
+++ b/data/cards/18816758.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Duel Terminal - Raid of the Inverz!!
     rarities:
     - Duel Terminal Rare Parallel Rare
+  - set_number: DTC4-JP030
+    set_name: Duel Terminal Chronicle 4 - Chapter of Opposites
+    rarities:
+    - Duel Terminal Rare Parallel Rare
   ko:
   - set_number: HA05-KR060
     set_name: 'Hidden Arsenal 5: Steelswarm Invasion'
