--- a/data/cards/36361633.yaml
+++ b/data/cards/36361633.yaml
@@ -352,6 +352,10 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  - set_number: ESP4-KR037
+    set_name: Expansion Pack Vol.4
+    rarities:
+    - Rare
   - set_number: AE02-KR022
     set_name: Advanced Event Pack 2013 Vol.2
     rarities:
