--- a/data/cards/57421866.yaml
+++ b/data/cards/57421866.yaml
@@ -190,6 +190,10 @@ sets:
     set_name: 'Duelist Pack: Yusei 2'
     rarities:
     - Common
+  - set_number: DT09-JP005
+    set_name: Duel Terminal - Vylon Descends!!
+    rarities:
+    - Duel Terminal Normal Parallel Rare
   - set_number: DE04-JP045
     set_name: Duelist Edition Volume 4
     rarities:
