--- a/data/cards/77783947.yaml
+++ b/data/cards/77783947.yaml
@@ -68,11 +68,11 @@ sets:
     rarities:
     - Common
   fr:
-  - set_number: DUEA-EN075
+  - set_number: DUEA-FR075
     set_name: Duelist Alliance
     rarities:
     - Common
-  - set_number: DUEA-ENDE2
+  - set_number: DUEA-FRDE2
     set_name: 'Duelist Alliance: Deluxe Edition'
     rarities:
     - Ultra Rare
