--- a/data/cards/90928333.yaml
+++ b/data/cards/90928333.yaml
@@ -238,6 +238,10 @@ sets:
     set_name: "Structure Deck: Warriors' Strike"
     rarities:
     - Common
+  - set_number: ESP4-KR011
+    set_name: Expansion Pack Vol.4
+    rarities:
+    - Common
   - set_number: ST14-KR029
     set_name: Starter Deck 2014
     rarities:
