--- a/data/cards/09637706.yaml
+++ b/data/cards/09637706.yaml
@@ -122,6 +122,10 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  - set_number: ESP4-KR045
+    set_name: Expansion Pack Vol.4
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
