--- a/data/cards/29826127.yaml
+++ b/data/cards/29826127.yaml
@@ -122,7 +122,7 @@ sets:
     rarities:
     - Common
   ja:
-  - set_number: EEN-IT051
+  - set_number: EEN-JP051
     set_name: Elemental Energy
     rarities:
     - Common
