--- a/data/cards/63142001.yaml
+++ b/data/cards/63142001.yaml
@@ -120,6 +120,10 @@ sets:
     set_name: Expert Edition Volume 3
     rarities:
     - Common
+  - set_number: ESP4-KR044
+    set_name: Expansion Pack Vol.4
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
