--- a/data/cards/81218874.yaml
+++ b/data/cards/81218874.yaml
@@ -69,6 +69,10 @@ sets:
     set_name: Duel Terminal - Judgment of Omega!!
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: DTC4-JP059
+    set_name: Duel Terminal Chronicle 4 - Chapter of Opposites
+    rarities:
+    - Duel Terminal Normal Parallel Rare
   ko:
   - set_number: HA06-KR029
     set_name: 'Hidden Arsenal 6: Omega Xyz'
