--- a/data/cards/95220856.yaml
+++ b/data/cards/95220856.yaml
@@ -91,11 +91,11 @@ sets:
     set_name: Labyrinth of Nightmare
     rarities:
     - Short Print
-  - set_number: DB2-SP033
+  - set_number: DB2-IT033
     set_name: Dark Beginning 2
     rarities:
     - Common
-  - set_number: LCJW-SP125
+  - set_number: LCJW-IT125
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
