--- a/rush.yaml
+++ b/rush.yaml
@@ -110029,7 +110029,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（戦士族）１体に装備できる。
   ko:
   zh-TW:
   zh-CN:
@@ -110041,7 +110042,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    装備モンスターは相手の効果では破壊されない。自分の墓地に装備魔法カードがある場合、さらに装備モンスターの攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
