--- a/data/cards/04259068.yaml
+++ b/data/cards/04259068.yaml
@@ -8,7 +8,7 @@ name:
   it: Economia della Magia
   pt: Magia Econômica
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>力<rt>りょく</rt></ruby><ruby>倹<rt>けん</rt></ruby><ruby>約<rt>やく</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Maryoku Kenyaku Jutsu
+  ja_romaji: Maryoku Ken'yakujutsu
   ko: 마력 절약술
   ko_rr:
   zh-TW:
