--- a/data/cards/00423585.yaml
+++ b/data/cards/00423585.yaml
@@ -277,6 +277,9 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: DBVS-JP025
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: PP01-KR006
     set_name: Premium Pack Vol.1
