--- a/data/cards/16598965.yaml
+++ b/data/cards/16598965.yaml
@@ -111,6 +111,9 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Rare
+  - set_number: DBVS-JP045
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: BODE-KR078
     set_name: Burst of Destiny
