--- a/data/cards/84339249.yaml
+++ b/data/cards/84339249.yaml
@@ -44,7 +44,11 @@ atk: 2400
 def: 2100
 images:
 - index: 1
+  image: ProtectingSpiritLoagaeth-DAMA-JP-UR.png
+  illustration: ProtectingSpiritLoagaeth-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: ProtectingSpiritLoagaeth-DAMA-EN-UR-1E.png
+  illustration: ProtectingSpiritLoagaeth-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DAMA-EN025
@@ -89,6 +93,9 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: DBVS-JP041
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: DAMA-KR025
     set_name: Dawn of Majesty
