--- a/data/cards/90590303.yaml
+++ b/data/cards/90590303.yaml
@@ -143,6 +143,9 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: DBVS-JP044
+    set_name: 'Deck Build Pack: Valiant Smashers'
+    rarities:
   ko:
   - set_number: CP17-KR042
     set_name: Collectors Pack 2017
