--- a/data/cards/44656491.yaml
+++ b/data/cards/44656491.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: Retro Pack
     rarities:
     - Rare
+  - set_number: DL12-DE013
+    set_name: Duelist League 3 participation cards
+    rarities:
+    - Rare
   - set_number: LCYW-DE266
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
@@ -118,6 +122,10 @@ sets:
     set_name: Retro Pack
     rarities:
     - Rare
+  - set_number: DL12-FR013
+    set_name: Duelist League 3 participation cards
+    rarities:
+    - Rare
   - set_number: LCYW-FR266
     set_name: "Legendary Collection 3: Yugi's World Mega Pack"
     rarities:
@@ -137,6 +145,10 @@ sets:
     - Super Rare
   - set_number: RP01-IT082
     set_name: Retro Pack
+    rarities:
+    - Rare
+  - set_number: DL12-IT013
+    set_name: Duelist League 3 participation cards
     rarities:
     - Rare
   - set_number: LCYW-IT266
