--- a/data/cards/91512835.yaml
+++ b/data/cards/91512835.yaml
@@ -93,6 +93,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: DPBC-DE026
+    set_name: 'Duelist Pack: Battle City'
+    rarities:
+    - Common
   - set_number: LED2-DE012
     set_name: 'Legendary Duelists: Ancient Millennium'
     rarities:
@@ -120,6 +124,10 @@ sets:
     - Ultra Rare
   - set_number: LCJW-FR037
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: DPBC-FR026
+    set_name: 'Duelist Pack: Battle City'
     rarities:
     - Common
   - set_number: LED2-FR012
@@ -151,6 +159,10 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
+  - set_number: DPBC-IT026
+    set_name: 'Duelist Pack: Battle City'
+    rarities:
+    - Common
   - set_number: LED2-IT012
     set_name: 'Legendary Duelists: Ancient Millennium'
     rarities:
@@ -166,6 +178,10 @@ sets:
   pt:
   - set_number: LCJW-PT037
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
+  - set_number: DPBC-PT026
+    set_name: 'Duelist Pack: Battle City'
     rarities:
     - Common
   - set_number: LED2-PT012
