--- a/data/cards/93107608.yaml
+++ b/data/cards/93107608.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: Dark Revelation Volume 3
     rarities:
     - Common
+  - set_number: DL13-DE007
+    set_name: Duelist League 13 participation cards
+    rarities:
+    - Rare
   fr:
   - set_number: SOD-FR025
     set_name: Soul of the Duelist
@@ -74,6 +78,10 @@ sets:
     set_name: Dark Revelation Volume 3
     rarities:
     - Common
+  - set_number: DL13-FR007
+    set_name: Duelist League 13 participation cards
+    rarities:
+    - Rare
   it:
   - set_number: SOD-IT025
     set_name: Soul of the Duelist
@@ -83,6 +91,10 @@ sets:
     set_name: Dark Revelation Volume 3
     rarities:
     - Common
+  - set_number: DL13-IT007
+    set_name: Duelist League 13 participation cards
+    rarities:
+    - Rare
   pt:
   - set_number: SOD-PT025
     set_name: Soul of the Duelist
