--- a/data/cards/98847704.yaml
+++ b/data/cards/98847704.yaml
@@ -138,7 +138,7 @@ sets:
     set_name: Ancient Prophecy
     rarities:
     - Rare
-  - set_number: DP09-JP019
+  - set_number: DP09-KR019
     set_name: 'Duelist Pack: Yusei 2'
     rarities:
     - Common
