--- a/data/cards/99469936.yaml
+++ b/data/cards/99469936.yaml
@@ -88,7 +88,7 @@ sets:
     - Common
     - Secret Rare
   ko:
-  - set_number: DP15-JP018
+  - set_number: DP15-KR018
     set_name: 'Duelist Pack: Kastle Siblings'
     rarities:
     - Ultra Rare
