--- a/data/cards/yugipedia1002079.yaml
+++ b/data/cards/yugipedia1002079.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Special Summon 1 FIRE Beast, 1 FIRE Beast-Warrior, and 1 FIRE Winged Beast monster (1 each from your hand, Deck, and GY), but negate their effects, also destroy them during the End Phase. You can banish this card from your GY; this turn, your opponent cannot activate card or effects when your "Fire King" monster(s) is Normal or Special Summoned. You can only each effect of "Solidarity Strike of the Fire Kings" once per turn.
+    Special Summon 1 FIRE Beast, 1 FIRE Beast-Warrior, and 1 FIRE Winged Beast monster (1 each from your hand, Deck, and GY), but negate their effects, also destroy them during the End Phase. You can banish this card from your GY; this turn, your opponent cannot activate cards or effects when your "Fire King" monster(s) is Normal or Special Summoned. You can only use each effect of "Solidarity Strike of the Fire Kings" once per turn.
   de:
   es:
   fr:
