--- a/data/cards/18988391.yaml
+++ b/data/cards/18988391.yaml
@@ -108,7 +108,7 @@ sets:
     set_name: Cosmo Blazer
     rarities:
     - Common
-  - set_number: DP14-JP018
+  - set_number: DP14-KR018
     set_name: 'Duelist Pack: Yuma 2: Gogogo & Dododo'
     rarities:
     - Common
