--- a/data/cards/39440937.yaml
+++ b/data/cards/39440937.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: The Shining Darkness
     rarities:
     - Super Rare
+  - set_number: DE04-JP151
+    set_name: Duelist Edition Volume 4
+    rarities:
+    - Common
   ko:
   - set_number: TSHD-KR050
     set_name: The Shining Darkness
