--- a/data/cards/yugipedia1002078.yaml
+++ b/data/cards/yugipedia1002078.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target any same numbers of "Fire King" monsters you control and cards your opponent controls; destroy them. If a "Fire King" card(s) you control would be destroyed by card effect, you can banish this card from your GY instead. You can only use 1 "Fire King Sacred Immolation" effect per turn, and only once that turn.
+    Target the same number of "Fire King" monsters you control and cards your opponent controls; destroy them. If a "Fire King" card(s) you control would be destroyed by card effect, you can banish this card from your GY instead. You can only use 1 "Fire King Sacred Immolation" effect per turn, and only once that turn.
   de:
   es:
   fr:
