Update VJump promos
Added Rescue Hedgehog
Removed officially released cards

--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -42,12 +42,9 @@
 - set_abbreviation: SR14
   fake_password_range:
     - 100314000
-# Brionac, the Dragon of Icy Malevolence
-- yugipedia: 986316
-  fake_password: 100200241
-# Flametongue the Blazing Magical Blade
-- yugipedia: 977106
-  fake_password: 100295701
 # Black Luster Soldier
 - yugipedia: 10276
   fake_password: 511002613
+# Rescue Hedgehog
+- yugipedia: 994370
+  fake_password: 100200242
