--- a/data/cards/00373085.yaml
+++ b/data/cards/00373085.yaml
@@ -75,6 +75,9 @@ sets:
     set_name: Jump Festa Limited Pack 2019
     rarities:
     - Super Rare
+  - set_number: SR14-JP021
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: PP14-KRB08
     set_name: Premium Pack Vol.14 2nd Wave
