--- a/data/cards/10591919.yaml
+++ b/data/cards/10591919.yaml
@@ -78,6 +78,10 @@ sets:
     set_name: Raging Battle
     rarities:
     - Common
+  - set_number: DE03-JP121
+    set_name: Duelist Edition Volume 3
+    rarities:
+    - Common
   ko:
   - set_number: RGBT-KR016
     set_name: Raging Battle
