--- a/data/cards/13429800.yaml
+++ b/data/cards/13429800.yaml
@@ -78,6 +78,10 @@ sets:
     rarities:
     - Common
   fr:
+  - set_number: DDY-F009
+    set_name: 'Starter Deck: Yugi'
+    rarities:
+    - Common
   - set_number: SYE-FR009
     set_name: 'Starter Deck: Yugi Evolution'
     rarities:
@@ -87,6 +91,10 @@ sets:
     rarities:
     - Common
   it:
+  - set_number: MIY-I009
+    set_name: 'Starter Deck: Yugi'
+    rarities:
+    - Common
   - set_number: SYE-IT009
     set_name: 'Starter Deck: Yugi Evolution'
     rarities:
