--- a/data/cards/14536035.yaml
+++ b/data/cards/14536035.yaml
@@ -182,6 +182,10 @@ sets:
     set_name: Extra Pack
     rarities:
     - Common
+  - set_number: AE05-KR009
+    set_name: Advanced Event Pack 2014 Vol.3
+    rarities:
+    - Super Rare
   - set_number: SD30-KR017
     set_name: 'Structure Deck: Pendulum Domination'
     rarities:
