--- a/data/cards/38120068.yaml
+++ b/data/cards/38120068.yaml
@@ -286,6 +286,9 @@ sets:
     set_name: Tournament Pack 2023 Vol.3
     rarities:
     - Common
+  - set_number: SR14-JP031
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: SD13-KR018
     set_name: 'Structure Deck: Revival of the Great Dragon'
