--- a/data/cards/43262273.yaml
+++ b/data/cards/43262273.yaml
@@ -111,6 +111,9 @@ sets:
     set_name: 'Structure Deck: Ice Barrier of the Frozen Prison'
     rarities:
     - Common
+  - set_number: SR14-JP038
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: SOVR-KR080
     set_name: Stardust Overdrive
