--- a/data/cards/48815792.yaml
+++ b/data/cards/48815792.yaml
@@ -180,6 +180,9 @@ sets:
     set_name: Secret Shiny Box
     rarities:
     - Normal Parallel Rare
+  - set_number: SR14-JP043
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: SAST-KR056
     set_name: Savage Strike
