--- a/data/cards/53797637.yaml
+++ b/data/cards/53797637.yaml
@@ -76,6 +76,9 @@ sets:
     set_name: 'Promotion Pack 3: Part B'
     rarities:
     - Common
+  - set_number: SR14-JP009
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: PR04-KR001
     set_name: Promotion Pack 2013 Vol.4
