--- a/data/cards/55119278.yaml
+++ b/data/cards/55119278.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: Crossroads of Chaos
     rarities:
     - Common
+  - set_number: DE03-JP040
+    set_name: Duelist Edition Volume 3
+    rarities:
+    - Common
   ko:
   - set_number: CSOC-KR011
     set_name: Crossroads of Chaos
