--- a/data/cards/56427559.yaml
+++ b/data/cards/56427559.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: 'Collectors Pack: ZEXAL Version'
     rarities:
     - Common
+  - set_number: AE04-KR012
+    set_name: Advanced Event Pack 2014 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
