--- a/data/cards/63101919.yaml
+++ b/data/cards/63101919.yaml
@@ -70,11 +70,11 @@ sets:
     rarities:
     - Super Rare
   fr:
-  - set_number: CSOC-EN088
+  - set_number: CSOC-FR088
     set_name: Crossroads of Chaos
     rarities:
     - Secret Rare
-  - set_number: SOVR-ENSE1
+  - set_number: SOVR-FRSE1
     set_name: 'Stardust Overdrive: Special Edition'
     rarities:
     - Super Rare
