--- a/data/cards/67234805.yaml
+++ b/data/cards/67234805.yaml
@@ -63,6 +63,9 @@ sets:
     set_name: Starstrike Blast
     rarities:
     - Common
+  - set_number: SR14-JP040
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: STBL-KR078
     set_name: Starstrike Blast
