--- a/data/cards/79575620.yaml
+++ b/data/cards/79575620.yaml
@@ -173,6 +173,10 @@ sets:
     rarities:
     - Rare
     - Mosaic Rare
+  - set_number: LCJW-PT280
+    set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Common
   - set_number: YS14-PTA07
     set_name: Space-Time Showdown Power-Up Pack
     rarities:
