--- a/data/cards/91949988.yaml
+++ b/data/cards/91949988.yaml
@@ -112,7 +112,7 @@ sets:
     set_name: Astral Pack Seven
     rarities:
     - Ultimate Rare
-  - set_number: BLLR-IT065
+  - set_number: BLLR-PT065
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
