--- a/data/cards/93542102.yaml
+++ b/data/cards/93542102.yaml
@@ -105,6 +105,10 @@ sets:
     set_name: Duel Terminal - Justice Strikes Back!!
     rarities:
     - Duel Terminal Normal Parallel Rare
+  - set_number: DE03-JP037
+    set_name: Duelist Edition Volume 3
+    rarities:
+    - Rare
   - set_number: DP27-JP008
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
