--- a/data/cards/96746083.yaml
+++ b/data/cards/96746083.yaml
@@ -120,6 +120,9 @@ sets:
     set_name: 'Structure Deck: Soulburner'
     rarities:
     - Common
+  - set_number: SR14-JP012
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: TDIL-KR025
     set_name: The Dark Illusion
