--- a/data/cards/yugipedia994370.yaml
+++ b/data/cards/yugipedia994370.yaml
@@ -48,5 +48,7 @@ limit_regulation:
 is_translation_unofficial:
   name:
     en: true
+  text:
+    en: true
 yugipedia_page_id: 994370
 fake_password: 100200242
