--- a/data/cards/07672244.yaml
+++ b/data/cards/07672244.yaml
@@ -103,7 +103,7 @@ sets:
     rarities:
     - Common
   - set_number: HGP4-KR044
-    set_name: Dark Revelation Volume 4
+    set_name: Expert Edition Volume 4
     rarities:
     - Common
 limit_regulation:
