--- a/data/cards/16435215.yaml
+++ b/data/cards/16435215.yaml
@@ -215,6 +215,10 @@ sets:
     set_name: Expert Edition Volume.1
     rarities:
     - Common
+  - set_number: AE04-KR009
+    set_name: Advanced Event Pack 2014 Vol.2
+    rarities:
+    - Super Rare
   - set_number: DP16-KR028
     set_name: 'Duelist Pack: Battle City'
     rarities:
