--- a/data/cards/19613556.yaml
+++ b/data/cards/19613556.yaml
@@ -405,6 +405,10 @@ sets:
     set_name: 'Structure Deck: Fury from the Deep'
     rarities:
     - Common
+  - set_number: LCJW-PT284
+    set_name: "Legendary Collection 4: Joey's World Mega Pack"
+    rarities:
+    - Ultra Rare
   - set_number: MRD-PT142
     set_name: Metal Raiders (25th Anniversary Edition)
     rarities:
