--- a/data/cards/24317029.yaml
+++ b/data/cards/24317029.yaml
@@ -260,6 +260,10 @@ sets:
     set_name: Expansion Pack Vol.2
     rarities:
     - Common
+  - set_number: AE04-KR013
+    set_name: Advanced Event Pack 2014 Vol.2
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
