--- a/data/cards/42703248.yaml
+++ b/data/cards/42703248.yaml
@@ -182,7 +182,7 @@ sets:
     set_name: Spell Ruler
     rarities:
     - Super Rare
-  - set_number: SDJ-F032
+  - set_number: DDJ-F032
     set_name: 'Starter Deck: Joey'
     rarities:
     - Common
@@ -292,7 +292,7 @@ sets:
     rarities:
     - Super Rare
   pt:
-  - set_number: MIJ-P032
+  - set_number: DIJ-P032
     set_name: 'Starter Deck: Joey'
     rarities:
     - Common
