--- a/data/cards/57103969.yaml
+++ b/data/cards/57103969.yaml
@@ -280,6 +280,9 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: SR14-JP029
+    set_name: 'Structure Deck R: Onslaught of the Fire Kings'
+    rarities:
   ko:
   - set_number: CBLZ-KR059
     set_name: Cosmo Blazer
