--- a/data/cards/59616123.yaml
+++ b/data/cards/59616123.yaml
@@ -211,6 +211,10 @@ sets:
     set_name: 'Structure Deck: Blitzkrieg of the Mechlight Dragons'
     rarities:
     - Common
+  - set_number: AE04-KR024
+    set_name: Advanced Event Pack 2014 Vol.2
+    rarities:
+    - Common
   - set_number: SD33-KR035
     set_name: 'Structure Deck: Powercode Link'
     rarities:
