--- a/data/cards/66011101.yaml
+++ b/data/cards/66011101.yaml
@@ -143,7 +143,7 @@ sets:
     rarities:
     - Ultra Rare
   ko:
-  - set_number: CP19-JP031
+  - set_number: CP19-KR031
     set_name: 'Collection Pack: Duelist of Revolution Version'
     rarities:
     - Ultra Rare
