--- a/data/rush/yugipedia1002095.yaml
+++ b/data/rush/yugipedia1002095.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    墓地にあるこのカードのカード名は「ブラック・ホール」になる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（闇属性／ギャラクシー族）３体を墓地へ送るか、自分フィールドに表側表示のフュージョンモンスター（闇属性／ギャラクシー族）がいる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +46,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    お互いのフィールドのモンスターを全て破壊する。その後、自分の墓地のモンスター（ギャラクシー族）１体を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
