--- a/data/cards/11221418.yaml
+++ b/data/cards/11221418.yaml
@@ -92,7 +92,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: PRIO-JP075
+  - set_number: PRIO-KR075
     set_name: Primal Origin
     rarities:
     - Common
