--- a/data/cards/13409151.yaml
+++ b/data/cards/13409151.yaml
@@ -71,7 +71,7 @@ sets:
     rarities:
     - Common
   it:
-  - set_number: AST-DE068
+  - set_number: AST-IT068
     set_name: Ancient Sanctuary
     rarities:
     - Short Print
