--- a/data/cards/20563387.yaml
+++ b/data/cards/20563387.yaml
@@ -101,7 +101,7 @@ sets:
     rarities:
     - Ultra Rare
   ko:
-  - set_number: PRIO-JP046
+  - set_number: PRIO-KR046
     set_name: Primal Origin
     rarities:
     - Super Rare
