--- a/data/cards/26566878.yaml
+++ b/data/cards/26566878.yaml
@@ -94,7 +94,7 @@ sets:
     rarities:
     - Common
   ko:
-  - set_number: AST-SP059
+  - set_number: AST-KR059
     set_name: Ancient Sanctuary
     rarities:
     - Common
