--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -723,6 +723,11 @@ sets:
     - Secret Rare
     - Extra Secret Rare
     - Quarter Century Secret Rare
+  - set_number: PPC2-JP001
+    set_name: Yu-Gi-Oh! Duel Monsters x Power Pros Collaboration commemorative cards 2
+    rarities:
+    - Common
+    - Normal Parallel Rare
   ko:
   - set_number: LOD-KR028
     set_name: Legacy of Darkness
