--- a/data/cards/08964854.yaml
+++ b/data/cards/08964854.yaml
@@ -55,7 +55,7 @@ sets:
     rarities:
     - Common
   fr:
-  - set_number: DR1-EN085
+  - set_number: DR1-FR085
     set_name: Dark Revelation Volume 1
     rarities:
     - Common
