--- a/data/cards/46668237.yaml
+++ b/data/cards/46668237.yaml
@@ -150,7 +150,7 @@ sets:
     set_name: Expansion Pack Vol.3
     rarities:
     - Secret Rare
-  - set_number: GS05-JP006
+  - set_number: GS05-KR006
     set_name: Gold Series 2013
     rarities:
     - Normal Rare
