--- a/data/cards/89959682.yaml
+++ b/data/cards/89959682.yaml
@@ -46,6 +46,10 @@ images:
   image: PharaonicProtector-SGX3-EN-C-1E.png
 sets:
   en:
+  - set_number: AST-061
+    set_name: Ancient Sanctuary
+    rarities:
+    - Short Print
   - set_number: DR2-EN174
     set_name: Dark Revelation Volume 2
     rarities:
@@ -54,15 +58,15 @@ sets:
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
     - Common
-  - set_number: AST-061
-    set_name: Ancient Sanctuary
-    rarities:
-    - Short Print
   de:
   - set_number: AST-DE061
     set_name: Ancient Sanctuary
     rarities:
     - Short Print
+  - set_number: DR2-DE174
+    set_name: Dark Revelation Volume 2
+    rarities:
+    - Common
   - set_number: SGX3-DEI04
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -72,6 +76,10 @@ sets:
     set_name: Ancient Sanctuary
     rarities:
     - Short Print
+  - set_number: DR2-FR174
+    set_name: Dark Revelation Volume 2
+    rarities:
+    - Common
   - set_number: SGX3-FRI04
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
@@ -81,6 +89,10 @@ sets:
     set_name: Ancient Sanctuary
     rarities:
     - Short Print
+  - set_number: DR2-IT174
+    set_name: Dark Revelation Volume 2
+    rarities:
+    - Common
   - set_number: SGX3-ITI04
     set_name: 'Speed Duel GX: Duelists of Shadows'
     rarities:
