--- a/data/cards/44472639.yaml
+++ b/data/cards/44472639.yaml
@@ -62,7 +62,7 @@ sets:
     set_name: Ancient Sanctuary
     rarities:
     - Common
-  - set_number: DR2-EN163
+  - set_number: DR2-FR163
     set_name: Dark Revelation Volume 2
     rarities:
     - Common
