--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -68,6 +68,8 @@ jobs:
           git rm --ignore-unmatch yugipedia*.json yugipedia*.yaml
           python3 ../../src/main_rush.py \
             ../../../yaml-yugipedia/wikitext/rush \
+            --ko-override ../../../yaml-yugi-ko/rush-override.csv \
+            --ko-prerelease ../../../yaml-yugi-ko/rush-prerelease.csv \
             --aggregate ../../../aggregate/rush.json
       - name: Transform (TCG Speed Duel Skills)
         working-directory: yaml-yugi/data/tcg-speed-skill
