--- a/data/cards/00844056.yaml
+++ b/data/cards/00844056.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 红箭
 text:
   en: |-
-    Target up to 2 face-up monsters in the Extra Monster Zone; banish them until the End Phase. You can only activate 1 "Red Arrows" per turn.
+    Target up to 2 face-up monsters in the Extra Monster Zone(s); banish them until the End Phase. You can only activate 1 "Red Arrows" per turn.
   de:
   es:
   fr:
@@ -53,9 +53,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716399
