--- a/data/cards/36848764.yaml
+++ b/data/cards/36848764.yaml
@@ -1,21 +1,21 @@
 konami_id: 18320
 password: 36848764
 name:
-  en: Sweet Room-Maid
+  en: Sweet Roommaid
   de:
   es:
   fr:
   it:
   pt:
   ja: スウィートルームメイド
-  ja_romaji: Suwīto Rūmu Meido
+  ja_romaji: Suwīto Rūmumeido
   ko: 스위트룸메이드
   ko_rr: Seuwiteurummeideu
   zh-TW:
   zh-CN: 甜点房女仆
 text:
   en: |-
-    If a card(s) is sent from the hand and/or Deck to the GY: Target 1 card in either GY; shuffle it into the Deck. You can only activate 1 "Sweet Room-Maid" per turn.
+    If a card(s) is sent from the hand and/or Deck to the GY: Target 1 card in either GY; shuffle it into the Deck. You can only activate 1 "Sweet Roommaid" per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: SweetRoomMaid-SLF1-JP-C.png
+  image: SweetRoommaid-SLF1-JP-C.png
 sets:
   ja:
   - set_number: SLF1-JP099
@@ -51,9 +51,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 716952
