--- a/data/cards/72233469.yaml
+++ b/data/cards/72233469.yaml
@@ -1,7 +1,7 @@
 konami_id: 18321
 password: 72233469
 name:
-  en: Lil-la-Rap
+  en: Lil-la Rap
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 璃拉说唱
 text:
   en: |-
-    Once per turn, if you Special Summon a monster(s) from the GY (except during the Damage Step): You can make your opponent lose 1000 LP, and if they do, you gain 500 LP. You can only activate the effect of "Lil-la-Rap" once per Chain.
+    Once per turn, if you Special Summon a monster(s) from the GY (except during the Damage Step): You can make your opponent lose 1000 LP, and if they do, you gain 500 LP. You can only activate this effect of "Lil-la Rap" once per Chain.
   de:
   es:
   fr:
@@ -57,9 +57,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715627
