Added Phantom Nightmare

--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -31,7 +31,7 @@
   fake_password_range:
     - 101202000
 # Phantom Nightmare
-- set_abbreviation: Phantom Nightmare
+- set_abbreviation: PHNI
   fake_password_range:
     - 101203000
 # Deck Build Pack: Valiant Smashers
